Fixing alignment issues; adding some padding for breathing room

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,6 +1,7 @@
 body {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     color: #333;
+    padding: 28px;
 }
 
 .city-name {
